--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>nl.gogognome</groupId>
     <artifactId>gogotextsearch</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>Gogo Text Search</name>
@@ -35,7 +34,8 @@
         <connection>scm:git:git://github.com/gogognomne/gogotextsearch.git</connection>
         <developerConnection>scm:git:ssh://github.com:gogognome/gogotextsearch.git</developerConnection>
         <url>https://github.com/gogognome/gogotextsearch</url>
-    </scm>
+      <tag>gogotextsearch-1.0.0</tag>
+  </scm>
 
     <build>
         <plugins>
