--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>nl.gogognome</groupId>
     <artifactId>gogotextsearch</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
     <packaging>jar</packaging>
 
     <name>Gogo Text Search</name>
@@ -34,7 +34,7 @@
         <connection>scm:git:git@github.com:gogognome/gogotextsearch.git</connection>
         <developerConnection>scm:git:git@github.com:gogognome/gogotextsearch.git</developerConnection>
         <url>https://github.com/gogognome/gogotextsearch</url>
-      <tag>gogotextsearch-1.0.0</tag>
+      <tag>v2.0.1</tag>
     </scm>
 
     <distributionManagement>
